--- a/package.json
+++ b/package.json
@@ -2,16 +2,12 @@
   "name": "node-express-mongoose",
   "description": "A boilerplate application for express mongoose",
   "version": "1.0.0",
-  "author": {
-    "name": "Madhusudhan Srinivasa",
-    "email": "me@madhums.me"
-  },
   "engines": {
     "node": ">=6.x"
   },
   "scripts": {
     "start": "./node_modules/.bin/cross-env NODE_ENV=development ./node_modules/.bin/nodemon server.js",
-    "test": "./node_modules/.bin/cross-env NODE_ENV=test ./node_modules/.bin/babel-tape-runner test/test-*.js"
+    "test": "./node_modules/.bin/cross-env NODE_ENV=test ./node_modules/.bin/mocha --timeout 10000"
   },
   "dependencies": {
     "body-parser": "1.17.2",
@@ -44,7 +40,10 @@
     "eslint": "~4.1.0",
     "nodemon": "~1.11.0",
     "supertest": "~3.0.0",
-    "tape": "~4.7.0"
+    "tape": "~4.7.0",
+    "chai": "^3.5.0",
+    "chai-http": "^2.0.1",
+    "mocha": "^2.4.5"
   },
   "repository": {
     "type": "git",
